--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,4 +63,4 @@ add_custom_target(
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-add_executable(${PROJECT_NAME} ${SRC_LIST} src/Board.cpp include/Board.h src/Cube.cpp include/Cube.h)
+add_executable(${PROJECT_NAME} ${SRC_LIST})
