--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,7 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+upload_protocol = espota
+upload_port = cube.local
+upload_flags =
+    --auth=esp8266
